--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "clsx": "^2.0.0",
     "date-fns": "^3.2.0",
     "lucide-react": "^0.302.0",
-    "next": "14.0.4",
+    "next": "^14.1.0",
     "next-themes": "^0.2.1",
     "qrcode": "^1.5.3",
     "query-string": "^8.1.0",
