New faster db. TODO: Null name problem

--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL='mysql://enzbdvppage1wshf7bu6:pscale_pw_i40BWHOtQ0hTTiplmmNIg3xROUTKbBM0TBxGtJsecrF@aws.connect.psdb.cloud/brain-wave?sslaccept=strict'
+DATABASE_URL='mysql://phxkz336rahe5k6nxg2s:pscale_pw_dU1ZoYVmLgmKAaaRBf1Rkqsoz697bHCwi5dV0VpRvH5@aws.connect.psdb.cloud/brainwave?sslaccept=strict'
 
 # Upload thing
 
