--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
 # clerk.com key and pass
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_c291bmQtbGlnZXItNjYuY2xlcmsuYWNjb3VudHMuZGV2JA
-CLERK_SECRET_KEY=sk_test_ZVICCeKBN17XgDTj4A84aGSYFwwgxYhdwLw0Dcy1sR
+#NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_c291bmQtbGlnZXItNjYuY2xlcmsuYWNjb3VudHMuZGV2JA
+#CLERK_SECRET_KEY=sk_test_ZVICCeKBN17XgDTj4A84aGSYFwwgxYhdwLw0Dcy1sR
+
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_ZWxlY3RyaWMtcmluZ3RhaWwtMTYuY2xlcmsuYWNjb3VudHMuZGV2JA
+CLERK_SECRET_KEY=sk_test_AnBiEOR72qaxcOM5AHVFajA0cwHrbCfiQYTl5tafFg
 
 # sign-up and sign-in
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
