--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.29.1",
     "@hookform/resolvers": "^3.3.3",
-    "@prisma/client": "^5.7.1",
+    "@prisma/client": "^5.10.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -21,7 +21,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@tanstack/react-query": "^5.17.19",
+    "@tanstack/react-query": "^5.21.7",
     "@uploadthing/react": "^6.0.2",
     "@zegocloud/zego-uikit-prebuilt": "^1.10.2",
     "axios": "^1.6.2",
@@ -29,15 +29,18 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^3.2.0",
+    "emoji-picker-react": "^4.8.0",
     "lucide-react": "^0.302.0",
     "next": "^14.1.0",
     "next-themes": "^0.2.1",
     "qrcode": "^1.5.3",
     "query-string": "^8.1.0",
+    "quill": "^1.3.7",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.2",
+    "react-quill": "^2.0.0",
     "socket.io": "^4.7.3",
     "socket.io-client": "^4.7.3",
     "tailwind-merge": "^2.2.0",
@@ -57,7 +60,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
-    "prisma": "^5.7.1",
+    "prisma": "^5.10.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
