--- a/package.json
+++ b/package.json
@@ -10,18 +10,30 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.1",
+    "@emoji-mart/data": "^1.1.2",
+    "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^3.3.3",
     "@prisma/client": "^5.10.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@siposdani87/expo-rich-text-editor": "^1.0.7",
     "@tanstack/react-query": "^5.21.7",
+    "@tiptap/extension-color": "^2.2.4",
+    "@tiptap/extension-heading": "^2.2.4",
+    "@tiptap/extension-list-item": "^2.2.4",
+    "@tiptap/extension-text-style": "^2.2.4",
+    "@tiptap/extension-underline": "^2.2.4",
+    "@tiptap/pm": "^2.2.4",
+    "@tiptap/react": "^2.2.4",
+    "@tiptap/starter-kit": "^2.2.4",
     "@uploadthing/react": "^6.0.2",
     "@zegocloud/zego-uikit-prebuilt": "^1.10.2",
     "axios": "^1.6.2",
@@ -29,7 +41,9 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^3.2.0",
+    "emoji-mart": "^5.5.2",
     "emoji-picker-react": "^4.8.0",
+    "html-react-parser": "^5.1.7",
     "lucide-react": "^0.302.0",
     "next": "^14.1.0",
     "next-themes": "^0.2.1",
@@ -40,7 +54,9 @@
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.2",
+    "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
+    "sass": "^1.71.1",
     "socket.io": "^4.7.3",
     "socket.io-client": "^4.7.3",
     "tailwind-merge": "^2.2.0",
