new text editor, responsive updates, challenges page formating

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@siposdani87/expo-rich-text-editor": "^1.0.7",
     "@tanstack/react-query": "^5.21.7",
+    "@tinymce/tinymce-react": "^4.3.2",
     "@tiptap/extension-color": "^2.2.4",
     "@tiptap/extension-heading": "^2.2.4",
     "@tiptap/extension-list-item": "^2.2.4",
@@ -56,6 +57,7 @@
     "react-hook-form": "^7.49.2",
     "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
+    "react-responsive": "^9.0.2",
     "sass": "^1.71.1",
     "socket.io": "^4.7.3",
     "socket.io-client": "^4.7.3",
