--- a/package.json
+++ b/package.json
@@ -44,10 +44,15 @@
     "date-fns": "^3.2.0",
     "emoji-mart": "^5.5.2",
     "emoji-picker-react": "^4.8.0",
+    "express": "^4.18.3",
+    "handlebars": "^4.7.8",
     "html-react-parser": "^5.1.7",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.302.0",
     "next": "^14.1.0",
     "next-themes": "^0.2.1",
+    "pdfkit": "^0.14.0",
+    "puppeteer": "^22.4.1",
     "qrcode": "^1.5.3",
     "query-string": "^8.1.0",
     "quill": "^1.3.7",
@@ -70,6 +75,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pdfkit": "^0.13.4",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
