--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "sass": "^1.71.1",
     "socket.io": "^4.7.3",
     "socket.io-client": "^4.7.3",
+    "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.1.0",
