--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@tiptap/pm": "^2.2.4",
     "@tiptap/react": "^2.2.4",
     "@tiptap/starter-kit": "^2.2.4",
+    "@tldraw/tldraw": "^2.0.0-alpha.19",
     "@uploadthing/react": "^6.0.2",
     "@zegocloud/zego-uikit-prebuilt": "^1.10.2",
     "axios": "^1.6.2",
@@ -69,6 +70,7 @@
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "tldraw": "^2.0.1",
     "uploadthing": "^6.1.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4",
