--- a/package.json
+++ b/package.json
@@ -63,7 +63,11 @@
     "react-hook-form": "^7.49.2",
     "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
+    "react-resizable-box": "^2.1.0",
+    "react-resizable-panels": "^2.0.13",
+    "react-resplit": "^1.2.2",
     "react-responsive": "^9.0.2",
+    "react-split-pane": "^0.1.92",
     "sass": "^1.71.1",
     "socket.io": "^4.7.3",
     "socket.io-client": "^4.7.3",
