--- a/package.json
+++ b/package.json
@@ -3,12 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "devStart": "nodemon server.js",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^41.2.0",
+    "@ckeditor/ckeditor5-comments": "^41.2.0",
+    "@ckeditor/ckeditor5-export-pdf": "^41.2.0",
+    "@ckeditor/ckeditor5-export-word": "^41.2.0",
+    "@ckeditor/ckeditor5-font": "^41.2.0",
+    "@ckeditor/ckeditor5-import-word": "^41.2.0",
+    "@ckeditor/ckeditor5-react": "^6.2.0",
+    "@ckeditor/ckeditor5-real-time-collaboration": "^41.2.0",
+    "@ckeditor/ckeditor5-revision-history": "^41.2.0",
+    "@ckeditor/ckeditor5-track-changes": "^41.2.0",
     "@clerk/nextjs": "^4.29.1",
     "@emoji-mart/data": "^1.1.2",
     "@emoji-mart/react": "^1.1.1",
@@ -39,6 +50,7 @@
     "@uploadthing/react": "^6.0.2",
     "@zegocloud/zego-uikit-prebuilt": "^1.10.2",
     "axios": "^1.6.2",
+    "ckeditor5-custom-build": "^0.0.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
@@ -50,6 +62,7 @@
     "html-react-parser": "^5.1.7",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.302.0",
+    "mongoose": "^8.2.2",
     "next": "^14.1.3",
     "next-themes": "^0.2.1",
     "pdfkit": "^0.14.0",
@@ -63,6 +76,7 @@
     "react-hook-form": "^7.49.2",
     "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
+    "react-router-dom": "^5.3.4",
     "sass": "^1.71.1",
     "socket.io": "^4.7.3",
     "socket.io-client": "^4.7.3",
@@ -72,6 +86,10 @@
     "tldraw": "^2.0.1",
     "uploadthing": "^6.1.0",
     "uuid": "^9.0.1",
+    "y-quill": "^0.1.5",
+    "y-webrtc": "^10.3.0",
+    "y-websocket": "^1.5.4",
+    "yjs": "^13.6.14",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
@@ -85,6 +103,7 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "nodemon": "^3.1.0",
     "postcss": "^8",
     "prisma": "^5.10.2",
     "tailwindcss": "^3.3.0",
