--- a/package.json
+++ b/package.json
@@ -77,8 +77,8 @@
     "react-icons": "^5.0.1",
     "react-loadable": "^5.5.0",
     "react-quill": "^2.0.0",
-    "react-router-dom": "^5.3.4",
     "react-responsive": "^9.0.2",
+    "react-router-dom": "^5.3.4",
     "sass": "^1.71.1",
     "socket.io": "^4.7.3",
     "socket.io-client": "^4.7.3",
@@ -88,7 +88,9 @@
     "tldraw": "^2.0.1",
     "uploadthing": "^6.1.0",
     "uuid": "^9.0.1",
+    "ws": "^8.16.0",
     "y-quill": "^0.1.5",
+    "y-utility": "^0.1.3",
     "y-webrtc": "^10.3.0",
     "y-websocket": "^1.5.4",
     "yjs": "^13.6.14",
