--- a/package.json
+++ b/package.json
@@ -108,10 +108,10 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "20.11.30",
     "@types/pdfkit": "^0.13.4",
     "@types/qrcode": "^1.5.5",
-    "@types/react": "^18",
+    "@types/react": "18.2.69",
     "@types/react-dom": "^18",
     "@types/react-table": "^7.7.20",
     "@types/uuid": "^9.0.7",
@@ -122,6 +122,6 @@
     "postcss": "^8",
     "prisma": "^5.10.2",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "5.4.3"
   }
 }
