--- a/package.json
+++ b/package.json
@@ -32,6 +32,13 @@
     "@clerk/nextjs": "^4.29.1",
     "@emoji-mart/data": "^1.1.2",
     "@emoji-mart/react": "^1.1.1",
+    "@fullcalendar/core": "^6.1.11",
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/interaction": "^6.1.11",
+    "@fullcalendar/react": "^6.1.11",
+    "@fullcalendar/timegrid": "^6.1.11",
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.3",
     "@hookform/resolvers": "^3.3.3",
     "@prisma/client": "^5.10.2",
     "@radix-ui/react-avatar": "^1.0.4",
