--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^3.2.0",
+    "driver.js": "^1.3.1",
     "emoji-mart": "^5.5.2",
     "emoji-picker-react": "^4.8.0",
     "express": "^4.18.3",
@@ -91,6 +92,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.2",
     "react-icons": "^5.0.1",
+    "react-joyride": "^2.8.0",
     "react-loadable": "^5.5.0",
     "react-quill": "^2.0.0",
     "react-responsive": "^9.0.2",
