--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.3",
     "@hookform/resolvers": "^3.3.3",
+    "@iconscout/react-unicons": "^2.0.2",
     "@prisma/client": "^5.10.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -90,6 +91,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-feather": "^2.0.10",
     "react-hook-form": "^7.49.2",
     "react-icons": "^5.0.1",
     "react-joyride": "^2.8.0",
