--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "tldraw": "^2.0.1",
+    "typed.js": "^2.1.0",
     "uploadthing": "^6.1.0",
     "uuid": "^9.0.1",
     "ws": "^8.16.0",
